--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 <script src="./singleLinkedList.js"></script>
 <script src="./doubleLinkedList.js"></script>
+<script src="./stacksAndQueues.js"></script>
