binary-search-tree

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <script src="./singleLinkedList.js"></script>
 <script src="./doubleLinkedList.js"></script>
 <script src="./stacksAndQueues.js"></script>
+<script src="./binarySearch.js"></script>
